[FIX] style for planaday adjusted, no horizontal scroll...

--- a/ac-004_frontend/src/Pages/Planday.css
+++ b/ac-004_frontend/src/Pages/Planday.css
@@ -1,11 +1,12 @@
 .PlanDayContainer {
     font-family: 'Arial', sans-serif;
-    width: 100%;
-    max-width: 1200px;
-    margin: 0px 800px 0px 0px;
+    width: 70vw;
+    /*max-height: 50vh;*/
+    /*max-width: 100%;*/
+    /*margin: 0px 800px 0px 0px;*/
     padding: 2px;
     color: #000000;
-    background-color: #ffffff;
+    background-color: orange;
     border-radius: 5px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     position: relative;
@@ -20,12 +21,12 @@
 }
 
 .TasksSection {
-    background-color: #ffffff;
+    background-color: purple;
     border-radius: 8px;
     padding: 25px;
     margin-bottom: 25px;
     box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-    max-height: 400px;
+    max-height: 35vh;
     overflow-y: auto;
 }
 
